added new files

--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <html>
 <head>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
+    <title>Online Learning</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     </head>
 <body>
+    <div class="container">
     <header>
-    <h1></h1>
+    <h1>Online Learning</h1>
     </header>
+        <div class="row">
     <div class="whyilikeit">
-    <h3>why i like it </h3>
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+    <h3>Why i like it </h3>
     <p>
     It is offerd by the internet.
         And power.
@@ -22,9 +27,16 @@
         in 1800 a student used a online learning to stay in tach with what the school was learning.
         its more different than going to school.
         its fun because if your a child in class and you have done something wrong then she sends you to the corner the corner of the couch.
-        </p>
+      </p>
+     </div>
+        <div class="col-md-3"></div>
     </div>
-    <div class="Facts">    
+   </div>
+        <div class="row">
+    <div class="Facts">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+        
     <h3>Facts</h3>
     <p>
         Did you know communication improved in the early 1900.
@@ -40,9 +52,15 @@
         Advanced Communication and Colaboration
         Helps in Critical Thinking.
         </p>    
-    <img src="assets/img/onlinelearning.jpg" height="70%" width="50%">
+       </div>
+        <div class="col-md-2"></div>
     </div>
+   </div>
+        <img src="assets/img/onlinelearning.jpg" height="70%" width="50%">
+        <div class="row">
     <div class="Howitsdone">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
     <h3>How its done.</h3>
     <p>
         It is done by using a website that you can talk to your teacher.
@@ -57,10 +75,17 @@
         Study like its what pays for every thing.
         Destroy all distractions.
         Find a quiet space.
-    </p>
-        <img src="assets/img/onlinelearning1.jpg" height="70%" width="50%">
+      </p>
+        
+     </div>
+        <div class="col-md-1"></div>
     </div>
+   </div>
+        <img src="assets/img/onlinelearning1.jpg" height="70%" width="50%">
+        <div class="row">
     <div class="Typesofonlinelearningsites">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
     <h3>Types of online learning sites</h3>
 <p>
      Udemy.
@@ -75,9 +100,15 @@
      iversity.
      zoom
      Meet google.
-        </p>
+     </p>
     </div>
-    <div class="whatisonlinelearning">    
+        <div class="col-md-3"></div>
+   </div>
+  </div>
+        <div class="row">
+    <div class="whatisonlinelearning">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
     <h3>what is online learning.</h3>
         <p>
             Online learning is a form of distance learning.
@@ -92,8 +123,15 @@
             When using distance learning is using online learning.
             You work on digital lesons.
             It call it working at home with tech.
-            </p>
-        <img src="assets/img/zoom.jpg" height="70%" width="50%">
+      </p>   
+     </div>
+    <div class="col-md-2"></div>
     </div>
-    </body>
+   </div>
+  </div>
+    <img src="assets/img/zoom.jpg" height="70%" width="50%">
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+ </body>
 </html>
