--- a/index.html
+++ b/index.html
@@ -1,44 +1,64 @@
 <html>
 <head>
-    <title>Online Learning</title>
+   <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!--css files-->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <title>Online Learning</title>
     </head>
 <body>
-    <div class="container">
+<div class="container">
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--header-->
+<div class="row">
     <header>
-    <h1>Online Learning</h1>
+    <h1><em>Online Learning</em></h1>
     </header>
-        <div class="row">
-    <div class="whyilikeit">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-    <h3>Why i like it </h3>
+</div>
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--Why I Like It-->
+<div class="row">
+<div class="col-md-1"></div>
+<div class="col-md-10">
+    <h3><em>Why I Like It</em></h3>
     <p>
+    <em>
     It is offerd by the internet.
-        And power.
-        Because if you have no power it dose not give power to the internet.
+    And power.
+    Because if you have no power it dose not give power to the internet.
     did you know that the newest way of learning is distance learning.
-        in 1990 the <strong>World wide web</strong> spread.
+    in 1990 the <strong>World wide web</strong> spread.
     The learning expirience is estounding.
-        there is a high majority of people using the online learning.
-        they are theories that online learning is evolving.
-        digital tech is helping online learning.
-        in 1800 a student used a online learning to stay in tach with what the school was learning.
-        its more different than going to school.
-        its fun because if your a child in class and you have done something wrong then she sends you to the corner the corner of the couch.
-      </p>
+    there is a high majority of people using the online learning.
+    they are theories that online learning is evolving.
+    digital tech is helping online learning.
+    in 1800 a student used a online learning to stay in tach with what the school was learning.
+    its more different than going to school.
+    its fun because if your a child in class and you have done something wrong then she sends you to the corner the corner of the couch.
+    </em>
+    </p>
      </div>
-        <div class="col-md-3"></div>
-    </div>
-   </div>
-        <div class="row">
-    <div class="Facts">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-        
-    <h3>Facts</h3>
+<div class="col-md-1"></div>
+</div>
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--Facts-->
+<div class="row">
+<div class="col-md-1"></div>
+<div class="col-md-6">
+    <h3><em>Facts</em></h3>
     <p>
+    <em>
         Did you know communication improved in the early 1900.
         And distance education took the radio waves.
         It lets you balance family labour<strong>(work)</strong> and education.
@@ -51,18 +71,25 @@
         Self motivation.
         Advanced Communication and Colaboration
         Helps in Critical Thinking.
-        </p>    
+    </em>    
+    </p>    
        </div>
-        <div class="col-md-2"></div>
-    </div>
-   </div>
-        <img src="assets/img/onlinelearning.jpg" height="70%" width="50%">
-        <div class="row">
-    <div class="Howitsdone">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-    <h3>How its done.</h3>
+<div class="col-md-4">
+<img src="assets/img/onlinelearning.jpg" height="" width="100%">
+        </div>
+<div class="col-md-1"></div>
+</div>
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--How Its Done-->
+<div class="row">
+<div class="col-md-1"></div>
+<div class="col-md-6">
+    <h3><em>How Its Done</em></h3>
     <p>
+    <em>
         It is done by using a website that you can talk to your teacher.
         Its a mix of vedio recordings
         It is done by cooperating with your instuctor.
@@ -75,19 +102,32 @@
         Study like its what pays for every thing.
         Destroy all distractions.
         Find a quiet space.
-      </p>
-        
+        Online learning is when you take lessons online.
+        Instead of in a physical classroom.
+        <br> <br>
+        If your schedule makes it hard to attend classes. 
+        And if you prefer studying at your own pace or if you live far from campus.
+        Online learning might be for you.
+        For most online courses, you'll be able to log on to Blackboard, access your lectures and homework assignments, and work on them when it is most convenient for you. ... You'll upload assignments directly through Blackboard and interact with your professors and classmates through discussion boards.<strong>from drexel</strong>
+      </em>
+      </p>        
      </div>
-        <div class="col-md-1"></div>
-    </div>
+<div class="col-md-4">
+<img src="assets/img/onlinelearning1.jpg" height="" width="100%">
+</div>
+<div class="col-md-1"></div>
    </div>
-        <img src="assets/img/onlinelearning1.jpg" height="70%" width="50%">
-        <div class="row">
-    <div class="Typesofonlinelearningsites">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
-    <h3>Types of online learning sites</h3>
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--Types of online learning sites-->
+<div class="row">
+<div class="col-md-1"></div>
+<div class="col-md-10">
+    <h3><em>Types Of Online Learning Sites</em></h3>
 <p>
+<em>
      Udemy.
      Edx.
      Khan Academy.
@@ -100,17 +140,22 @@
      iversity.
      zoom
      Meet google.
-     </p>
+</em>     
+</p>
     </div>
-        <div class="col-md-3"></div>
-   </div>
-  </div>
-        <div class="row">
-    <div class="whatisonlinelearning">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-    <h3>what is online learning.</h3>
-        <p>
+<div class="col-md-1"></div>
+</div>
+<!--space-->
+<div class="row">
+<br>
+</div>
+<!--What Is Online Learning-->
+<div class="row">
+<div class="col-md-1"></div>
+<div class="col-md-6">
+<h3><em>What Is Online Learning</em></h3>
+<p>
+        <em>
             Online learning is a form of distance learning.
             Online learning is a course program for getting information through technology.
             Online learning is made for children to gain understanding no matter where they are.
@@ -123,15 +168,19 @@
             When using distance learning is using online learning.
             You work on digital lesons.
             It call it working at home with tech.
+      </em>
       </p>   
-     </div>
-    <div class="col-md-2"></div>
+</div>
+<div class="col-md-4">
+<img src="assets/img/zoom.jpg" height="" width="100%">
     </div>
+<div class="col-md-1"></div>
+    </div>
+<!--space-->
+<div class="row">
+<br>
+</div>
    </div>
-  </div>
-    <img src="assets/img/zoom.jpg" height="70%" width="50%">
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery-3.5.1.min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
  </body>
 </html>
